// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resolvers lottieFile query returns empty when the lottie is not found 1`] = `
Object {
  "data": Object {
    "lottieFile": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolvers lottieFile query returns the lottie successfully 1`] = `
Object {
  "data": Object {
    "lottieFile": Object {
      "createdAt": "1630454400000",
      "id": "1",
      "slug": "W6HDcJoY946T8gGYLiiAJ",
      "updatedAt": "1630540800000",
      "url": "http://some_url.json",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolvers lottieFiles query runs the lottieFiles query successfuly and returns data 1`] = `
Object {
  "data": Object {
    "lottieFiles": Array [
      Object {
        "createdAt": "1630454400000",
        "id": "1",
        "updatedAt": "1630540800000",
      },
      Object {
        "createdAt": "1630627200000",
        "id": "2",
        "updatedAt": "1630713600000",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolvers runs the home query successfully 1`] = `
Object {
  "data": Object {
    "hello": Object {
      "message": "Hello from Apollo.",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
